Fix conversation update and update CSS to align framework

--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ footer{
 padding:1vh;
 background:#d2cece;
 width:25%;
-max-height:64.2vh;
+max-height:73vh;
 overflow-y: scroll;
 }
 
